# ScholarRush

Frontend/: .gitignore  README.md  index.html  tailwind.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/dashboard/: DashboardPreview.tsx
Frontend/src/components/home/: CtaSection.tsx  FeaturesSection.tsx  HeroSection.tsx  PartnersSection.tsx  StatsSection.tsx  TestimonialsSection.tsx
Frontend/src/components/layout/: Footer.tsx  Navbar.tsx
Frontend/src/components/scholarship/: ScholarshipCard.tsx
Frontend/src/pages/: About.tsx  HowItWorks.tsx  Index.tsx  Login.tsx  Register.tsx  Scholarships.tsx
server/: .gitignore  README.md  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
server/models/: schemas.py
server/routers/: evaluation.py
server/services/: essay_evaluator.py  evaluation_logic.py  groq_service.py  preprocessor.py
